--- a/BSR/index.html
+++ b/BSR/index.html
@@ -70,8 +70,10 @@
 <script>
   $(document).ready(function() {
     var notes = [
-      {"img":"","note":"BSR comming soon!"},
-//      {"img":"appshot-spot-1-clean.png","note":"SPOT v1"},
+      {"img":"bsr1.png","note":"BSR landing page summaries"},
+      {"img":"bsr2.png","note":"BSR search"},
+      {"img":"bsr3.png","note":"BSR details with lineage viewer"},
+      {"img":"bsr4.png","note":"BSR curation"},
     ];
     notes.forEach(function(slide,i) {
       ++i;
@@ -91,7 +93,7 @@
         <h3><a href="http://www.twitter.com/larryhengl">@LarryHengl</a></h3>
       </div>
       <div class="abstract col-md-9">
-        <p>Snaps of apps I built internally at Novartis for informatics research workflows.</p>
+        <p> <b> Snaps of apps I built internally at Novartis for informatics research workflows. Scrubbed for our (in)sanity. </b></p>
         <p>Goals: BSR is an app to register biological sample data.</p>
         <p>Notes: This app was built using Backbone and Marionette for client MVC, 
           handlebars templates, stylus CSS preprocessor, Datatables and jQuery plugins,
