--- a/INVIVO/index.html
+++ b/INVIVO/index.html
@@ -70,8 +70,7 @@
 <script>
   $(document).ready(function() {
     var notes = [
-      {"img":"","note":"BSR comming soon!"},
-//      {"img":"appshot-spot-1-clean.png","note":"SPOT v1"},
+      {"img":"invivo.png","note":"Invivo Study Publisher. The preview buttons on rt side launches Pipeline Pilot web page protocols to see what the final published results would look like before actual publishing."},
     ];
     notes.forEach(function(slide,i) {
       ++i;
@@ -91,11 +90,10 @@
         <h3><a href="http://www.twitter.com/larryhengl">@LarryHengl</a></h3>
       </div>
       <div class="abstract col-md-9">
-        <p>Snaps of apps I built internally at Novartis for informatics research workflows.</p>
-        <p>Goals: BSR is an app to register biological sample data.</p>
-        <p>Notes: This app was built using Backbone and Marionette for client MVC, 
-          handlebars templates, stylus CSS preprocessor, Datatables and jQuery plugins,
-          D3 for data viz, Mocha/Chai/Sinon/Phantom for tests, Brunch for app builds.</p>
+        <p> <b> Snaps of apps I built internally at Novartis for informatics research workflows. Scrubbed for our (in)sanity. </b></p>
+        <p>Goals: Invivo Publisher to push pharmacology data into a Sharepoint pipeline.</p>
+        <p>Notes: This app was built using old school js and jQuery and jqGrid.
+                  Found the style on CSS Zen (I think).</p>
       </div>
     </div>
     <hr/>
