--- a/COUCHDB/index.html
+++ b/COUCHDB/index.html
@@ -70,8 +70,9 @@
 <script>
   $(document).ready(function() {
     var notes = [
-      {"img":"","note":"BSR comming soon!"},
-//      {"img":"appshot-spot-1-clean.png","note":"SPOT v1"},
+      {"img":"couchdb-proto1.png","note":"CouchDB prototype for pharmacology data"},
+      {"img":"couchdb-proto2.png","note":"CouchDB prototype for gene mutation summaries. Silly green."},
+      {"img":"couchdb-use1.png","note":"Prod CouchDB for user's cellline data"},
     ];
     notes.forEach(function(slide,i) {
       ++i;
@@ -91,11 +92,10 @@
         <h3><a href="http://www.twitter.com/larryhengl">@LarryHengl</a></h3>
       </div>
       <div class="abstract col-md-9">
-        <p>Snaps of apps I built internally at Novartis for informatics research workflows.</p>
-        <p>Goals: BSR is an app to register biological sample data.</p>
-        <p>Notes: This app was built using Backbone and Marionette for client MVC, 
-          handlebars templates, stylus CSS preprocessor, Datatables and jQuery plugins,
-          D3 for data viz, Mocha/Chai/Sinon/Phantom for tests, Brunch for app builds.</p>
+        <p> <b> Snaps of apps I built internally at Novartis for informatics research workflows. Scrubbed for our (in)sanity. </b></p>
+        <p>Goals: Build prototypes for document-oriented unstructured data.</p>
+        <p>Notes: These apps were built using variations of javascript and jQuery (UI),
+          Flot for viz, and often stored in CouchDB and served as CouchApps.</p>
       </div>
     </div>
     <hr/>
