--- a/SPOT/index.html
+++ b/SPOT/index.html
@@ -70,8 +70,8 @@
 <script>
   $(document).ready(function() {
     var notes = [
+      {"img":"appshot-spot-2-clean.png","note":"SPOT v1"},
       {"img":"appshot-spot-1-clean.png","note":"SPOT Beta"},
-      {"img":"appshot-spot-1-clean.png","note":"SPOT v1"},
     ];
     notes.forEach(function(slide,i) {
       ++i;
@@ -91,7 +91,7 @@
         <h3><a href="http://www.twitter.com/larryhengl">@LarryHengl</a></h3>
       </div>
       <div class="abstract col-md-9">
-        <p>Snaps of apps I built internally at Novartis for informatics research workflows.</p>
+        <p> <b> Snaps of apps I built internally at Novartis for informatics research workflows. Scrubbed for our (in)sanity. </b></p>
         <p>Goals: SPOT is an app to view shRNA data.</p>
         <p>Notes: This app was built using Backbone for client MVC, D3 for data viz,
           Crossfilter for client side data dimension filters, and Brunch for app builds.</p>
