--- a/VARIANTSVIEWER/index.html
+++ b/VARIANTSVIEWER/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 <style>
 
