--- a/MYVARIANTJS/index.html
+++ b/MYVARIANTJS/index.html
@@ -91,11 +91,8 @@
         <h3><a href="http://www.twitter.com/larryhengl">@LarryHengl</a></h3>
       </div>
       <div class="abstract col-md-9">
-        <p> <b> Snaps of apps I built internally at BioMarin for informatics research workflows. Scrubbed for our (in)sanity. </b></p>
-        <p>Goals: Variants Viewer is a BioMarin web app used for mining genomic mutations in rare diseases,
-          and calculating disease incidence estimates in geo-ethnic populations.</p>
-        <p>Notes: This app was built using React, React-Router, D3 for data viz, dc.js for Crossfilter facets, FixedDataTable,
-          Baobab for state tree management, jStat, Bootstrap/FontAwesome, Gulp + Babel for app builds, and various supporting js libs.</p>
+        <p>Goals: MyVariant Search is a web UI that uses the myvariantjs node module developed for interfacing with the <a href="http://myvariant.info/">MyVariant.info</a> web API.</p>
+        <p>Notes: This app was built using React, Baobab for state tree management, Material UI, Gulp + Babel, myvariantjs node module, and various supporting js libs.</p>
       </div>
     </div>
     <hr/>
