--- a/MYVARIANTJS/index.html
+++ b/MYVARIANTJS/index.html
@@ -70,8 +70,7 @@
 <script>
   $(document).ready(function() {
     var notes = [
-      {"img":"variants-viewer-home.png","note":"Variants Viewer Home - Autosuggested gene search, Open previous query session state (saved to DB), Review source data info, Take an automated guided tour of the app."},
-      {"img":"variants-viewer.png","note":"Variants Viewer Search Results - Facet filters, Variant selection in lollipop plot, tabular interactions, hovertip details, export images and csv data."}
+      {"img":"myvariantjs-demo.png","note":"MyVariant Search is a web UI that uses the myvariantjs node module developed for interfacing with the MyVariant.info web API portal."}
     ];
     notes.forEach(function(slide,i) {
       ++i;
