--- a/MYVARIANTJS/index.html
+++ b/MYVARIANTJS/index.html
@@ -39,8 +39,8 @@
     margin-left: 10px;
   }
   .slide {
-    width: 300px;
-    height: 220px;
+    width: 501px;
+    height: 480px;
   }
   .note {
     font-size: 1.2em;
@@ -70,7 +70,9 @@
 <script>
   $(document).ready(function() {
     var notes = [
-      {"img":"myvariantjs-demo.png","note":"MyVariant Search is a web UI that uses the myvariantjs node module developed for interfacing with the MyVariant.info web API portal."}
+      {"img":"myvariantjs-demo1.png","note":"MyVariant Search is a web UI that uses the myvariantjs node module developed for interfacing with the MyVariant.info web API portal."},
+      {"img":"myvariantjs-demo2.png","note":""},
+      {"img":"myvariantjs-demo3.png","note":""}
     ];
     notes.forEach(function(slide,i) {
       ++i;
